[WinCairo][WebGL] Crash in WebKit::WCContentBuffer::platformLayerWillBeDestroyed() https://bugs.webkit.org/show_bug.cgi?id=237819

Reviewed by Don Olmstead.

WinCairo WTR was randomly crashing in
WCContentBuffer::platformLayerWillBeDestroyed(). It accessed a
stale pointer of WCScene::Layer.

* GPUProcess/graphics/wc/WCScene.cpp:
(WebKit::WCScene::Layer::~Layer): Clear the client of
WCContentBuffer.
(WebKit::WCScene::update):



Canonical link: https://commits.webkit.org/248494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291362 268f45cc-cd09-0410-ab3c-d52691b4dbfc